    previous, Closes: #847017)
  * net: Enable GTP as module (Closes: #846913)
  * [armhf] gpio: Enable GPIO_MCP23S08 as module (Closes: #845064)
  * aufs: Update support patchset to aufs4.9-20161219
  * Use debhelper compatibility level 9
  * [arm64] Revert "arm64/mm: Limit TASK_SIZE_64 ..." and add breaks on
    incompatible mozjs

  [ Uwe Kleine-König ]
  * enable `perf data' support; patch by Sebastian Andrzej Siewior
    (Closes: #846597)
  * [rt] Update to 4.9-rt1 and reenable
  * [armhf] Add support for switch hardware on Turris Omnia

  [ Aurelien Jarno ]
  * [arm64] Enable RTC_DRV_DS1307.

 -- Uwe Kleine-König <ukleinek@debian.org>  Sun, 18 Dec 2016 17:53:39 +0100

linux (4.9~rc8-1~exp1) experimental; urgency=medium

  * New upstream release candidate

  [ Ben Hutchings ]
  * radeon: Update package name in error message for missing firmware
  * [amd64] Remove xen-linux-system-<version> package
  * debian/control: Fix build-dependency on flex to work with new versions
    that have M-A: allowed
  * Revert "default exported asm symbols to zero"
  * [arm64] remoteproc: Disable QCOM_WCNSS_PIL (fixes FTBFS)
  * [sparc64] Don't re-add exports of string functions that are now only
    defined as macros (fixes FTBFS, after other fixes)

 -- Ben Hutchings <ben@decadent.org.uk>  Mon, 05 Dec 2016 05:02:30 +0000

linux (4.9~rc7-1~exp1) experimental; urgency=medium

  * New upstream release candidate:
    - [armhf,armel] Revert "arm: move exports to definitions" (Closes: #844530)

  [ Martin Michlmayr ]
  * [arm64] Enable more QCOM options: BT_QCOMSMD, QCOM_EBI2, QCOM_TSENS,
    QCOM_WCNSS_PIL and EXTCON_QCOM_SPMI_MISC.
  * [arm64] Enable ARCH_MVEBU and related options.

  [ Ben Hutchings ]
  * linux-headers-common: Make these packages architecture-independent by
    including headers for all architectures that we build a kernel for
  * Fix exported symbol versions:
    - Revert upstream changes moving exports to assembly sources