@@ -20,6 +20,7 @@ linux (4.9-1~exp1) UNRELEASED; urgency=medium
   * Use debhelper compatibility level 9
   * [arm64] Revert "arm64/mm: Limit TASK_SIZE_64 ..." and add breaks on
     incompatible mozjs
+  * genorig.py: Verify tag signatures (based on work by Yves-Alexis Perez)
 
   [ Uwe Kleine-König ]
   * enable `perf data' support; patch by Sebastian Andrzej Siewior
